--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,7 +1,27 @@
 {% extends "base.html" %}
 
-{% block title %}Sing Up{% endblock %}
+{% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<h1>This is the sign up page</h1>
+<form method = "POST">
+<h3>Sign Up</h3>
+<div class="form-group">
+    <label for="email">Email Address</label>
+    <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email">
+</div>
+<div class="form-group">
+    <label for="firstName">First Name</label>
+    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter First Name">
+</div>
+<div class="form-group">
+    <label for="password1">Password</label>
+    <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter Password">
+</div>
+<div class="form-group">
+    <label for="password2">Password (Confirm)</label>
+    <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm Your Password">
+</div>
+<br/>
+<button type="submit" class="btn btn-primary">Sign Up</button>
+</form>
 {% endblock %}
